# brev-launcher

./: COST_OPTIMIZER_GUIDE.md  DEMO_COMMANDS.md  DEMO_SCRIPT.md  DEMO_SUMMARY.md  FEATURES.md  QUICK_REF.md  README.md  START_HERE.md  demo.sh  pyproject.toml
example-project/: README.md  launchable.yaml  main.ipynb  requirements.txt
example-stable-diffusion/: README.md  app.py  launchable.yaml  requirements.txt
src/brev_launcher/: __init__.py  cli.py  constants.py  detect.py  gitinfo.py  launchable_schema.py  output.py  pricing.py  pricing_advanced.py  project_scan.py  render_yaml.py
tests/: __init__.py  test_detect.py  test_gitinfo.py  test_project_scan.py  test_render_yaml.py
